--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Angustrap",
+  "name": "angustrap",
   "version": "0.0.0",
   "description": "AngularJS Directives for the CSS/Markup components of Bootstrap",
   "main": "directives.js",
@@ -18,12 +18,24 @@
     "directives"
   ],
   "author": "Louis Teboul (a.k.a \"Androguide\")",
-  "license": "MIT",
+  "license": "Apache v2",
   "bugs": {
     "url": "https://github.com/Androguide/Angustrap/issues"
   },
   "homepage": "https://github.com/Androguide/Angustrap",
   "devDependencies": {
     "docco": "^0.6.3"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "dependencies": {
+    "body-parser": "^1.3.1",
+    "errorhandler": "^1.1.0",
+    "express": "^4.4.3",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-uglify": "^0.5.0",
+    "method-override": "^2.0.2"
   }
 }
