Grunt: add tasks to watch and compile CoffeeScript

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/Androguide/Angustrap",
   "devDependencies": {
-    "docco": "^0.6.3"
+    "docco": "^0.6.3",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "directories": {
     "doc": "docs"
