directives: add an attribute which delegates to ngClick for relevant directives
Also remove useless asId & asClass attributes, id & class can be directly passed on the custom elements

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "angustrap",
   "version": "0.0.0",
   "description": "AngularJS Directives for the CSS/Markup components of Bootstrap",
-  "main": "directives.js",
+  "main": "dist/angustrap.min.js",
   "moduleType": [
     "amd"
   ],
