--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.18",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angularjs": "*"
   }
 }
