--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
     "doc": "docs"
   },
   "dependencies": {
-    "body-parser": "^1.3.1",
-    "errorhandler": "^1.1.0",
-    "express": "^4.4.3",
+    "errorhandler": "~1.1.1",
+    "express": "~4.5.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-uglify": "^0.5.0",
-    "method-override": "^2.0.2"
+    "grunt-contrib-uglify": "^0.5.0"
   }
 }
